2002-09-27  H.J. Lu <hjl@gnu.org>

	* gas/mips/mips-jalx.s: Add ".p2align 4".
	* gas/mips/mips16-jalx.s: Likewise.

	* gas/mips/mips-jalx.d: Check nop.
	* gas/mips/mips16-jalx.d: Likewise.

2002-09-26  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* gas/mips/mips-jalx.d: New file, check jalx assembly.
	* gas/mips/mips-jalx.s: Likewise.
	* gas/mips/mips-no-jalx.l: Likewise.
	* gas/mips/mips-no-jalx.s: Likewise.
	* gas/mips/mips16-jalx.d: Likewise.
	* gas/mips/mips16-jalx.s: Likewise.
	* gas/mips/mips.exp: Add new tests.

2002-09-26  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* gas/mips/jal-range.s: Fix jump overflow check.
	* gas/mips/jal-range.l: Likewise.

2002-09-23  Nick Clifton  <nickc@redhat.com>

	* gas/arm/armv1-bad.s: Add LDM and STM instructions which are
	unpredictable because of their use of the writeback bit.

2002-09-21  Nick Clifton  <nickc@redhat.com>

	* gas/arm/inst.s: Fix UNPREDICATABLE use of writeback in LDM/STM
	instructions.
	* gas/arm/inst.d: Update expected results.

2002-09-19  Jakub Jelinek  <jakub@redhat.com>

	* gas/i386/tlspic.s: Add tests.
	* gas/i386/tlspic.d: Regenerated.
	* gas/i386/tlsnopic.s: Add tests.
	* gas/i386/tlsnopic.d: Regenerated.

2002-09-19  Richard Henderson  <rth@redhat.com>

	* gas/alpha/elf-reloc-7.s: New.
	* gas/alpha/elf-reloc-7.d: New.
	* gas/alpha/alpha.exp: Run it.

2002-09-18  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/mips-abi32-pic2.s: New file.
	* gas/mips/mips-abi32-pic2.d: New file.
	* gas/mips/mips.exp: Run new test.

2002-09-18  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/baddata1.s: New file.
	* gas/mips/baddata1.l: New file.
	* gas/mips/mips.exp: Run new test.

2002-09-18  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/branch-misc-1.d: New file.
	* gas/mips/branch-misc-1.s: New file.
	* gas/mips/branch-misc-2.s: New file.
	* gas/mips/branch-misc-2.d: New file.
	* gas/mips/mips.exp: Run new tests.

2002-09-17  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
