@@ -1,3 +1,7 @@
+#
+# Some generic VAX tests
+#
+
 proc do_quad {} {
     set testname "quad.s: quadword immediate values"
     set x1 0
@@ -5,7 +9,7 @@ proc do_quad {} {
     set x3 0
     set file "quad.s"
     if [istarget vax-*-*elf*] {
-      set file "quad_elf.s"
+	set file "quad_elf.s"
     }
     gas_start $file "-al"
     while 1 {
@@ -22,6 +26,10 @@ proc do_quad {} {
     if [all_ones $x1 $x2 $x3] then { pass $testname } else { fail $testname }
 }
 
-if [istarget vax-*-*] then {
+if [istarget vax-*-* ] then {
     do_quad
+
+    if [istarget vax-*-*elf*] {
+	run_dump_test "elf-rel"
+    }
 }
