@@ -1,3 +1,9 @@
+2002-09-27  Jason Thorpe  <thorpej@wasabisystems.com>
+
+	* gas/vax/elf-rel.[ds]: New test.
+	* gas/vax/quad.exp: Move contents to...
+	* gas/vax/vax.exp: ...here.  New file.
+
 2002-09-27  H.J. Lu <hjl@gnu.org>
 
 	* gas/mips/mips-jalx.s: Add ".p2align 4".
